# libpam-dbus

./: Makefile.am  README  bootstrap.sh  configure.ac
data/: Makefile.am  pam-dbus-notify.desktop  pam-dbus-notify.desktop.in  pam_dbus.conf
debian/: changelog  control  copyright  libpam-dbus.install  pam-dbus-gnome.install  pam-dbus-notify.install  rules
dummy/: pam-dbus-notification-daemon.py
handlers/: Makefile.am  auth-dummy  pam-dbus-notify
src/: Makefile.am  pam_dbus.c
